2010-05-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: caller_login_p

	Here, "I" means "#include "b-excwho.h";
	"U" means "Use ‘caller_login_p’".
	* b-excwho.h: New file.
	* b-excwho.c: New file.
	* Makefile.am (libparts_a_SOURCES): Add b-excwho.h, b-excwho.c.
	* ci.c: I.
	(removelock, addbranch): U.
	* co.c: I.
	(rmlock): U.
	* rcs.c: I.
	(breaklock): U.
	* rcsclean.c: I.
	(unlock): U.
	* rcsedit.c: I.
	(findlock, addlock, checkaccesslist): U.

2010-05-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Consult env var RCS_MEM_LIMIT to set the memory limit.

	* base.h (struct behavior): Add member ‘mem_limit’.
	* rcsutil.c (gnurcs_init): Set ‘BE (mem_limit)’.
	* b-fro.c (REASONABLE_MMAP_SIZE): Delete #define.
	(fro_open): Use ‘BE (mem_limit)’ to determine read method.

2010-05-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Output proper range for ‘RM_STDIO’ fro.

	Regression introduced 2010-04-27, "Add abstraction: fro_spew_partial".
	* b-fro.c (fro_spew_partial): In the case of ‘RM_STDIO’,
	compute remaining size using range end, not range beginning.

2010-05-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Bump mmap limit down to 256 kilobytes.

	* b-fro.c (REASONABLE_MMAP_SIZE): Bump down to 262144.

2010-05-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Rewrite parsing.

	* b-grok.h: New file.
	* b-grok.c: New file.
	* b-complain.c (fatal_syntax): Don't output line number if 0.
	* b-complain.h (SYNTAX_ERROR): Specify 0 for line number.
	* b-fro.h (struct atat): New.
	(string_from_atat, atat_put, atat_display): New func decls.
	(ATAT_END, ATAT_TEXT_END, FIXUP_OLD): New macros.
	* b-fro.c: #include <string.h>.
	(string_from_atat, atat_put, atat_display): New funcs.
	* b-kwxout.c (expandline): Don't assign to ‘NEXT (c)’, ‘LEX (lno)’.
	* base.h (struct hshentry): Add members ‘log’, ‘text’;
	delete members ‘insertlns’, ‘deletelns’.
	(struct behavior): Delete member ‘receptive_to_next_hash_key’.
	(struct parse_state): Delete.
	(struct repo): New.